# opencodeR

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.sh
.agents/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto-assign.yml  release.yml  triage.yml
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs  tui.rs
crates/cli/src/agent/: conversation.rs  input.rs  mod.rs
crates/cli/src/monitor/: client.rs  dashboard.rs  mod.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/codemode/: Cargo.toml
crates/codemode/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: discovery.rs  lib.rs  memory.rs
crates/llm/: Cargo.toml
crates/llm/src/: lib.rs
crates/plugin/: Cargo.toml
crates/plugin/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs  payload.rs  query.rs  route.rs
crates/schema/: Cargo.toml
crates/schema/src/: agent.rs  command.rs  connection.rs  credential.rs  event.rs  filesystem.rs  identifier.rs  integration.rs  lib.rs  llm.rs  location.rs  model.rs  permission.rs  project.rs  prompt.rs  provider.rs  pty.rs  pty_ticket.rs  question.rs  reference.rs  revert.rs  schema.rs  session.rs  session_event.rs  session_id.rs  session_input.rs  session_message.rs  skill.rs  workspace.rs
crates/server/: Cargo.toml
crates/server/src/: handler.rs  lib.rs  middleware.rs  state.rs
crates/server/src/handler/: agent.rs  command.rs  credential.rs  event.rs  fs.rs  health.rs  integration.rs  location.rs  model.rs  permission.rs  project_copy.rs  provider.rs  pty.rs  question.rs  reference.rs  session.rs  skill.rs
crates/server/src/middleware/: access_log.rs  auth.rs
features/: ROADMAP.md  feature-comparison.json  features.json
packaging/arch/: PKGBUILD
packaging/debian/: control  rules
packaging/rpm/: opencodeR.spec
