[workspace]
resolver = "2"
members = [
  "crates/schema",
  "crates/protocol",
  "crates/llm",
  "crates/core",
  "crates/server",
  "crates/client",
  "crates/plugin",
  "crates/codemode",
  "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
bytes = "1"
futures = "0.3"
url = "2"
base64 = "0.22"
ratatui = "0.29"
crossterm = "0.28"
time = { version = "0.3", features = ["formatting"] }
