[package]
name = "opencode-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opencode"
path = "src/main.rs"

[dependencies]
opencode-core = { path = "../core" }
opencode-client = { path = "../client" }
opencode-server = { path = "../server" }
opencode-schema = { path = "../schema" }
opencode-plugin = { path = "../plugin" }
opencode-codemode = { path = "../codemode" }
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
anyhow.workspace = true
