[package]
name = "opencode-r-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "opencodeR"
path = "src/main.rs"

[[bin]]
name = "opencodeR-server"
path = "src/bin/server.rs"

[[bin]]
name = "opencodeR-client"
path = "src/bin/client.rs"

[dependencies]
opencode-r-core = { path = "../core" }
opencode-r-client = { path = "../client" }
opencode-r-server = { path = "../server" }
opencode-r-schema = { path = "../schema" }
opencode-r-plugin = { path = "../plugin" }
opencode-r-codemode = { path = "../codemode" }
clap = { workspace = true, features = ["derive"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
axum.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
ratatui.workspace = true
crossterm.workspace = true
chrono.workspace = true
clap_complete.workspace = true
