[package]
name = "opencode-codemode"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-schema = { path = "../schema" }
opencode-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
