[package]
name = "opencode-r-codemode"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-r-schema = { path = "../schema" }
opencode-r-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
