[package]
name = "opencode-r-core"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-r-schema = { path = "../schema" }
opencode-r-protocol = { path = "../protocol" }
opencode-r-llm = { path = "../llm" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
