[package]
name = "opencode-r-server"
version.workspace = true
edition.workspace = true

[dependencies]
opencode-r-core = { path = "../core" }
opencode-r-protocol = { path = "../protocol" }
opencode-r-schema = { path = "../schema" }
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
uuid.workspace = true
base64.workspace = true
futures.workspace = true
tokio-stream.workspace = true
opencode-r-llm = { path = "../llm" }
